# test_repository

./: .gitignore  CMakeLists.txt  LICENSE  README.md  codecov.yml
.github/workflows/: ci-cmake_tests.yml
cmake/: README.md
cmake/Modules/: GetGitRevisionDescription.cmake  Sanitizers.cmake
src/: CMakeLists.txt
src/version/: .gitignore  LICENSE  README.md  version.cpp.in  version.hpp
tests/: CMakeLists.txt  test_main.cpp
